完成初始数据导出功能
Signed-off-by: amwpfiqvy <amwpfiqvy@163.com>

--- a/Apq_DBTools/Apq_DBTools/Forms/SqlGen.resx
+++ b/Apq_DBTools/Apq_DBTools/Forms/SqlGen.resx
@@ -181,6 +181,9 @@
   <metadata name="sfdMeta.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>551, 21</value>
   </metadata>
+  <metadata name="bsdbv_table_key.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>646, 21</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>61</value>
   </metadata>
