错误列表添加图标
Signed-off-by: amwpfiqvy <amwpfiqvy@163.com>

--- a/Apq/Apq.Win/Windows/Forms/DockForms/ErrList.resx
+++ b/Apq/Apq.Win/Windows/Forms/DockForms/ErrList.resx
@@ -163,6 +163,115 @@
   <metadata name="_dv.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>291, 21</value>
   </metadata>
+  <metadata name="_xsd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>123, 19</value>
+  </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>361, 21</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABa
+        FgAAAk1TRnQBSQFMAgEBBQEAAQkBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABICIAAxkBIgIpATkBvgICAV4B/wIBAXUB/wIBAW0B/wICAUYB/wIKAQsB8wMv
+        Aa4DHAEm2AACNQFHAYsCAgGRAf8CAQGFAf8CAQGFAf8CAQGGAf8CAQGEAf8CAQGBAf8CAQGBAf8CAgFz
+        Af8DCQH1AzMBYdAAAjABXQGqAgIBjgH/AgEBjwH/AgEBlQH/AgEBmQH/AgEBmwH/AgEBmAH/AgEBlAH/
+        AgEBiwH/AgEBggH/AgIBiAH/AwMB/AMvAVPIAAIpAS8BQAIDAZQB/wIBAZoB/wJKAb8B/wIBAZ0B/wIB
+        AakB/wICAaoB/wICAagB/wIBAaIB/wJgAcUB/wIBAYoB/wIBAYYB/wICAYsB/wMVAeUDCAEJxAACBAGy
+        Af8CAQGkAf8CMAGpA/8B9AX/AgEBrAH/AgEBswH/AgEBsgH/AkQBtQn/AgEBlQH/AgIBiwH/AgIBVgH/
+        AzUBb8AAAhgBGwEgAgUBpwH/AgIBswH/AgEBsAH/AsQBqQn/AgEBsQH/Ak8ByAP/AfYF/wJ0AZMB/wIB
+        AasB/wICAZsB/wIDAZsB/wMnAcLAAAI0AXwBoQIHAbUB/wIGAcIB/wIEAcsB/wIBAboB/wLGAasR/wJ1
+        AZUB/wIBAcIB/wIDAbgB/wICAaoB/wIEAZ4B/wIUARcB5sAAAhkBqwHoAgkBwgH/AgkB0AH/AggB1AH/
+        AgEB0AH/AgEBwgH/AvcB6gH/A/4F/wKTAcgB/wIBAcgB/wICAcYB/wIGAcUB/wIDAbYB/wIEAaMB/wIQ
+        ASAB7cAAAhkBtwHqAg8B0AH/AhAB4QH/AgwB4AH/AgEB1gH/AkMBywP/AfsL/wH5Af8CAQHGAf8CAgHN
+        Af8CCAHPAf8CBgHDAf8CBwGtAf8CFwElAeLAAAI1AYkBpAIYAeAB/wIbAfIB/wIPAfMB/wJJAdID/wH1
+        Bf8ChQG7Af8C3QHFCf8CAQHSAf8CDQHZAf8CCwHKAf8CDAG8Af8CLgEwAbHAAAIZAR0BIgIjAekB/wIo
+        Av8CXwHWA/8B9QX/AnMBmwH/AgEB6AH/AgEB0QH/AsIBpAf/AfoB/wIHAegB/wISAdQB/wIPAc4B/wMr
+        AUfEAAIiAe0B/wI9Av8CPAH4Af8C2AG9Af8CbQGZAf8CAQH2Af8CAQHmAf8CAQHoAf8CAQHeAf8CuwGY
+        Af8CYAGoAf8CGgH6Af8CGgHZAf8CEAGJAfLIAAIkAS4BNQI8Av8CXQL/AmUB/AH/AlYC/wIyAv8CGgL/
+        Ah0C/wIyAv8CPgH2Af8CNgL/Ai0B+gH/AhsB6AH/AxIBF8wAAjkBgwGQAk4C/wJ9Av8ClAL/ApEC/wJ/
+        Av8CdAL/Am0C/wJcAv8CRAL/AicC/wMdASjUAAIpATkBQQJGAv8CegL/ApsC/wKjAv8CjgL/Am0C/wJM
+        Av8CIAHvAf/kAAIjASwBMgJAAaQBsAJNAe4B8QJEAdYB3gE7ATwBfgGLBAfsAAMKAQwDFwEfAxoBIwMU
+        ARoEBzQAARECEAEUAY0BXQE5AfUBQQE6ATcBaCwAAhUBFwEbATYBOAFfAXoBNgE5AWQBgQIcASABJhwA
+        ATkCNQFUAWEBMAEyAf8BYQExATMB/wFhATEBMwH/AWEBMQEzAf8BYAExATMB/wFgATEBMwH/AWABMQEz
+        Af8BYQExATMB/wFhATEBMwH/AWEBMQEzAf8BYQExATIB/wFiAS8BMAH/AWsBHgEbAf8DBwEIEAADEgEW
+        AzIBXgFQAVgBlQHmATkBRgGrAfoBOQFGAaoB+gFPAVUBgAHeAzUBkQMsAUoDCgELKAABLwEsASsBQwG5
+        AYoBXQH/AdYBoQFvAf8BPgE4ATUBYSwAATMBOQGWAcMBHAEmAcIB/wEDAQwBuAH/ASEBJwGeAdUYAAE1
+        AW4BfAGKAQEBsQHaAf8BAQGzAd8B/wEBAbMB3wH/AQEBswHfAf8BAQGzAd8B/wEBAboB5QH/AQEBywH8
+        Af8BAQG2AeIB/wEBAbMB3wH/AQEBswHfAf8BAQGzAd8B/wEBAbQB4AH/AQEBwAHvAf8BUgFIAVEB/wFI
+        AjsBcAgAAwIBAQMjATMBGgEtAbwB/wEUAS4B8AH/ARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/ARMBLAHr
+        Af8BCgEdAawB/wE3AUYBqQH7AzUBiAMWARwcAAIOAQ0BEAEnASUBJAE1AX8BUQE2Af8B5gG+AZQB/wHX
+        AagBfQH/AU4BQAE5AZUBHAIbASQoAAEwAToBwAHzAVEBXwHZAf8BEAEaAb0B/wEJAREBtAH4GAABNAF2
+        AYQBkwEBAcAB6wH/AQUB2QL/AQIB1gL/AQIB1gL/AQIB2QL/ARkBOwFOAf8BZAEGARgB/wFQAZ0BuAH/
+        AQEB1wL/AQIB1gL/AQIB1QL/AQ0B4AL/AQEByAH1Af8CTwFZAf8MAAIsAS4BPwEUAS4B8AH/ARUBLwH1
+        Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BEwEsAesB/wEI
+        ARoBogH/AzUBjAMMAQ4QAAEiAiABLQFqAU0BOgHOAaMBfwFgAf8BvAGbAXwB/wHAAaABgQH/Ae4BxgGf
+        Af8B1AGvAYoB/wGOAWMBQAH/AUQBGwEJAf0BVAE/ATUBswEcAhsBJCAAATMBNQFMAV8BLQE0AasB3gEd
+        ASQBqwHlATUBNwFWAW0cAAEBAcAB5gH/AREB4wL/AQEB1QL/AQEB1gL/AQEB2gL/ARIBGgElAf8BGgIB
+        Af8BIgFeAXoB/wEBAdcC/wEBAdUC/wEBAdUC/wEcAe4C/wEBAeEC/wFvASkBJAHTCAADCgELARUBLwH1
+        Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BXgFoAbcBygFOAVEBaQF4AV0BaQHDAdEBFQEvAfUB/wEV
+        AS8B9QH/ARUBLwH1Af8BFAEuAfAB/wEkATQBqQH+AzIBXAwAAUABOQE1AWIBxgGtAYwB/wHKAa4BlAH/
+        AdgBugGbAf8B9QHVAbEB/wH6AdsBuAL/AecBwAH/AfgB1QGwAf8B1wG1AZMB/wHKAa0BjgH/AawBgAFX
+        Af8BTAEkARQB7wEvASwBKwFCSAABBgHCAeQB+QEDAdAB9wH/AQoB4wL/AQEB2QL/AQEB2wL/AQEB7AL/
+        AQEB9QL/AQEB6AL/AQEB2gL/AQEB2QL/ARoB8gL/AQEB1AH9Af8BKgGJAZ4B/wQDCAABNAFCAbIBvwEV
+        AS8B9QH/ARUBLwH1Af8BOQE9AWQBcBAAATkBSwHfAfoBFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BDgEj
+        AcYB/wMzAZ0DDAEOBAABPwE6ATYBVgHCAa4BmQH/AeEBxgGrAv8B4QHCAv8B8wHTAf8BZwEIAQEB/wG+
+        AVEBHAH/AcwBXgEpAf8BjwExAQMC/wHnAcMB/wH4AdMBrwH/AdMBtQGVAf8BxgGgAXkB/wFNASgBFgHs
+        ARcCFgEcGAABJQEmAS4BOAE2AToBbgGOATYBOQFuAY4BJQEmAS4BOCAAAQEByQHoAf8BEgHtAv8BAQHd
+        Av8BAQHeAv8BAQHlAv8BRAERAR4B/wEBAegC/wEBAd0C/wEBAdwC/wEeAfkC/wEBAegC/wFuASsBJgHO
+        DAABFQEvAfUB/wEVAS8B9QH/ARwBMQHVAe8QAAEbATABygHvARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/
+        ARUBLwH1Af8BFQEvAfUB/wFFAVEBogH1AxwBJgQAAcoBugGnAf8B4wHMAbMC/wHpAc0C/wHkAcgC/wHk
+        AcgC/wH7Ad8B/wGEARoBAQH/AX8BGQEBA/8B4QL/AeEBwAL/Ad4BvQH/Af0B3AG5Af8B1QG5AZ4B/wGn
+        AX0BVwH/AVABQQE5AZkYAAE2ATcBVQFrARgBIgHMAf8BFwEhAcwB/wE2ATcBVQFsIAABDgHDAdsB7gEB
+        AdUB8gH/AQkB6gL/AQEB4wL/AQEB/gL/AWsCAQH/AQEB+QL/AQEB4QL/ARcB9wL/AQEB1wH5Af8BLgGJ
+        AZYB/wQDCAABIgEjASoBMAEVAS8B9QH/ARUBLwH1Af8BNAE2AUkBYAwAARsBMAHKAe8BFQEvAfUB/wEV
+        AS8B9QH/AR8BNAHkAe8CJQEnATEBFQEvAfUB/wEVAS8B9QH/AQgBGgGiAf8DIQEvAVoBUgFMAXYB1QHE
+        AbEC/wHsAdQC/wHoAc8C/wHoAc4C/wHnAc0C/wH2Ad4B/wGGAR4BAQH/AYIBHQEBAv8B+AHfAv8B4wHG
+        Av8B4wHFAv8B4wHFAf8B9gHYAbkB/wHeAcYBqwH/AUwBJgEWAeoYAAE5ATsBYAF5AR0BJwHQAf8BGgEk
+        Ac8B/wE3AToBYgF+JAABAQHOAeYB/wERAfUC/wEBAeYC/wEBAegC/wG6AVwBagH/AQEB9QL/AQEB5AL/
+        AR8D/wEBAe8C/wFuASMBHwHYDAABOwFBAXMBgAEVAS8B9QH/ARUBLwH1Af8BKQEqATMBQAgAARsBMAHK
+        Ae8BFQEvAfUB/wEVAS8B9QH/AR8BNAHkAe8IAAEVAS8B9QH/ARUBLwH1Af8BCAEaAaIB/wMfASwBxAG0
+        AaIB+QHuAdsBzAL/Ae4B2wL/AewB2AL/AesB1wL/AesB1QL/AfoB5gH/AYYBHQEBAf8BggEbAQEC/wH8
+        AeYC/wHnAc4C/wHkAcoC/wHlAcsC/wHoAc0B/wHjAcwBtQH/AVMBKwEYAfEYAAFAAUQBeQGXASwBOAHW
+        Af8BIwEtAdMB/wE5ATwBcQGRJAABBQHRAeQB+gEFAeUB+AH/AQQB8AL/AQIBowG0Af8BaQEiATgB/wED
+        AcwB4wH/AQ0B9wL/AQEB5wL/ASoBlAGfAf8DCgELDAABMAEzAUYBUAEVAS8B9QH/ARUBLwH1Af8BMgE5
+        AXkBrwQAARsBMAHKAe8BFQEvAfUB/wEVAS8B9QH/AR8BNAHkAe8IAAQGARUBLwH1Af8BFQEvAfUB/wE5
+        AUUBqgH5AxMBGAHGAboBsQH2AfIB5AHWAv8B8AHhAv8B7wHfAv8B7wHeAv8B7wHdA/8B9AH/AYcBHQEB
+        Af8BggEbAQED/wHtAv8B6gHVAv8B6QHRAv8B6QHSAv8B7QHWAf8B5AHOAbgB/wFSAS0BGQHwGAABRgFM
+        AX4BmgFDAVAB3wH/ATgBRQHbAf8BPQFBAXMBkCgAAQEB2AHoAf8BFAP/AQcBCwERAf8BPwEBARYB/wEj
+        AVYBbgH/ASUD/wEBAfcC/wF1AhoB4RQAARUBLwH1Af8BFQEvAfUB/wEKAR0BrAH/AR0BMgHZAe8BFQEv
+        AfUB/wEVAS8B9QH/AR8BNAHkAe8MAAFcAWMBlwGzARUBLwH1Af8BFQEvAfUB/wFLAU4BXgGmAwMBAgHL
+        Ab4BswH6AfMB6AHeAv8B9wHrAv8B8gHnAv8B8wHlAv8B+wHvAf8BgQEtAQUB/wGKAR0BAQH/AW4BCwEB
+        A/8B9QL/Ae4B3AL/Ae0B2gL/AeoB2AL/AfgB5AH/AesB2AHHAf8BVQE3ASoBzRgAAU0BUwGHAaIBWQFo
+        AegB/wFPAV0B5AH/AUQBSgF/AZ0oAAEBAd0B6QH/AQQB8AL/AQcCAQH/ATEBAQELAf8BLwFOAV0B/wEB
+        AfMC/wEhAagBsgH/AxABExQAARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BFQEvAfUB/wEf
+        ATQB5AHvDAABDQIOARABFQEvAfUB/wEVAS8B9QH/ARQBLgHwAf8DGgEkBAABOwE5ATcBRQHoAeEB2wP/
+        Af0C/wH4Ae0C/wH3Ae0C/wH5AfAD/wH2A/8B/gH/AfsB8QHlAv8B9wHpAv8B8gHkAv8B8AHhAv8B8AHf
+        Av8B+QHpAf8B/gHyAeEB/wE3ATIBMAFVGAABWQFjAakBwwFsAX4B8gH/AWUBdQHvAf8BTgFWAZ0BvCgA
+        BAQBAQHgAekB/wEUA/8BAwG4AcMB/wEkA/8BAQP/AXQBFQETAewYAAEqASwBOAFAARUBLwH1Af8BFQEv
+        AfUB/wEVAS8B9QH/ARQBLgHwAf8BJgExAYwBzwEvATEBPgFQATYBOQFUAXABFAEkAaMB7wEVAS8B9QH/
+        ARUBLwH1Af8BFQEvAfUB/wE4ATkBPQFfAwIBAQgAAt4B3AH/AfgB8gHtBv8B+QHyAv8B+QHzBf8BqgFK
+        ARsB/wHJAYcBZAL/AfwB9AL/AfUB6gL/AfUB6QX/AfUB6QHdAf8BkgF6AWgB1RwAAWUBcQG7AdIBgAGR
+        AfsB/wF4AYoB9wH/AVkBYwGtAccsAAEBAeMB6QH/AQUB9AH5Af8BCgP/AQEB+AH+Af8BGQG6Ab8B/wEX
+        AhYBHBwAAToBRAGRAZ8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1
+        Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BWwFiAZoBvAQEEAAB4gHlAeYB/wH6AfgB8wn/Ad8B0QHJ
+        Af8BhAEcAQEB/wFkAgEN/wH2Ae0B5wH/Ae0B2wHJAf4gAAFpAXcBwQHWAYkBnQL/AYQBlwH8Af8BYQFs
+        AbMByywAAQ0CDgEPAQEB6QHrAf8BaQP/AQED/wFzARMBEgHyJAABMAEzAUYBUAEVAS8B9QH/ARUBLwH1
+        Af8BFQEvAfUB/wEVAS8B9QH/ARUBLwH1Af8BFQEvAfUB/wEVAS8B9QH/ATsBPAFFAVgDAgEBGAAB6gHm
+        AeIB/wH2AfgB+gH/AvwB+wX/AcoBwgG7Af8B9gH3AfQF/wH9AfkB9gX/AXgBbgFnAaEkAAFxAX8BywHf
+        AZIBpgL/AY8BpAL/AW8BfQHOAeMwAAEBAvMB/wEBA/8BIgK8Ae8wAAEiASMBKgEwATsBQQFzAYABNAFC
+        AbIBvwE7AUEBcwGAAhkBHAEgKAADDQEPAZIBjAGFAaUB5gLkAfcB5ALlAfYB5QHkAeUB9gHlAd8B1wHz
+        ATUBMgExAUMsAAF1AYYB0QHnAX8BkwHnAfUBfwGSAecB9QFxAYEB0QHnNAABMQJIAVEgAAFCAU0BPgcA
+        AT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAB8AEHBgAB4AEDBgABwAEBBgABgAcAAYA3AAGA
+        AQEGAAGAAQEGAAHAAQMGAAHgAQ8GAAH4AR8GAAH8AR8B/wEfAfwBPwGAAQAB8AEHAf4BHwH8AT8CAAHA
+        AQMB+AEPAfwBPwEAAQEBwAEBAeABAwH8AT8BgAEBAYABAQHAAQEC/wGAAQEBhwKAAQAB/AE/AcABAwGP
+        AQABgAEAAfwBPwHAAQMBDgMAAfwBPwHgAQcBDAEwAgAB/AE/AeABBwEIAWACAAH8AT8B8AEPAYAB4AIA
+        AfwBPwHwAQ8BgQHBAgAB/AE/AfABHwGAAQEBgAEBAfwBPwH4AR8BwAEDAcABAwH8AT8B+AE/AeABBwHg
+        AQcB/AE/AfwBfwH4AT8B8AEfAfwBPwH+Af8L
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>67</value>
   </metadata>
